12/11/2017 Oleg Moskalenko <mom040267@gmail.com>
Version 4.5.0.8 'dan Eider':
	- Spelling fixes.
	
12/10/2017 Oleg Moskalenko <mom040267@gmail.com>
Version 4.5.0.7 'dan Eider':
	- Misc security improvements.
	
10/17/2016 Oleg Moskalenko <mom040267@gmail.com>
Version 4.5.0.6 'dan Eider':
	- Typos in the text fixed.
	- TLS1.2 support fixed.
	- uclient minor performance tweak.
	- Issue #113 fixed (by David Benjamin)
	- Report total traffic used per allocation via Redis (by Bradley T. Hughes)
	- Add the realm parameter in the example config file (by Domenico)

08/27/2016 Oleg Moskalenko <mom040267@gmail.com>
Version 4.5.0.5 'dan Eider':
	- Typos in the text fixed.
	- LibreSSL compatibility fixed.
	- "read_timeout" option support for MySQL.
	- new NAT behavior discovery utilty. 
	- new OAuth access_token encrypt/decrypt utilty.
	- improved configurability: added parameters for
	allocate, channel and permission lifetimes (by Richard Garnier).

08/20/2016 Oleg Moskalenko <mom040267@gmail.com>
Version 4.5.0.4 'dan Eider':
	- OpenSSL 1.1.0 support added.
	- CentOS 7 installation updated.
	- hiredis and mongo compilation configuration fixed
	(fix provided by Harsha Bellur).
	- RPM: Systemd optimization.
	- REST API option fixed.
	- Thread creation error handling fixed.
	- Issue #36 fixed.

11/15/2015 Oleg Moskalenko <mom040267@gmail.com>
Version 4.5.0.3 'dan Eider':
	- SSLv3 support removed. That provides extra security and
	compatibility with OpenSSL distributions or clones
	that do not support SSLv3 (like LibreSSL 2.3.0).
	This fix is required for fresh FreeBSD and for Debian unstable.
	- Compilation and configuration cleaning.
	- Fix for non-interactive shells.
	- RPM: Fixed mongo-c-driver include path (by Sergey Safarov).
	- RPM: Fixed startup daemon as non root user (by Sergey Safarov).
	- RPM: Systemd optimized for high-volume network traffic (by Sergey Safarov).

9/29/2015 Oleg Moskalenko <mom040267@gmail.com>
Version 4.5.0.2 'dan Eider':